force-app/main/default/objects/System_Default__mdt/System_Default__mdt.object-meta.xml
<CustomObject>
    <description>Used to default values in Apex/Flows to avoid hardcoding values</description>
    <label>System Default</label>
    <pluralLabel>System Defaults</pluralLabel>
</CustomObject>