force-app/main/default/objects/System_Default__mdt/fields/Application_Complete_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Application_Complete_Email_Template__c</fullName>
    <description>Email Template DeveloperName for email sent to Partners after SSF has been completed</description>
    <label>Application Complete Email Template</label>
    <length>130</length>
    <type>Text</type>
</CustomField>