force-app/main/default/objects/System_Default__mdt/fields/Continue_Application_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Continue_Application_Email_Template__c</fullName>
    <description>Email template sent to customers to &quot;Continue Application&quot; in SSF</description>
    <label>Continue Application Email Template</label>
    <length>130</length>
    <type>Text</type>
</CustomField>