force-app/main/default/objects/System_Default__mdt/fields/Credit_Login_Account_Username__c.field-meta.xml
<CustomField>
    <fullName>Credit_Login_Account_Username__c</fullName>
    <inlineHelpText>Account used to pull credit from LaserCA</inlineHelpText>
    <label>Credit Login Account Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>