force-app/main/default/objects/System_Default__mdt/fields/Credit_Provider__c.field-meta.xml
<CustomField>
    <fullName>Credit_Provider__c</fullName>
    <inlineHelpText>Credit provider that is used by LaserCA to pull credit. Currently either CREDITAPI (TransUnion) or CBCNEW(Experian)</inlineHelpText>
    <label>Credit Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>