force-app/main/default/objects/System_Default__mdt/fields/Default_Build__c.field-meta.xml
<CustomField>
    <fullName>Default_Build__c</fullName>
    <inlineHelpText>Defaults value for Build on Work Request object when it is created</inlineHelpText>
    <label>Default Build</label>
    <length>18</length>
    <type>Text</type>
</CustomField>