force-app/main/default/objects/System_Default__mdt/fields/Default_Client_Brand_Key__c.field-meta.xml
<CustomField>
    <fullName>Default_Client_Brand_Key__c</fullName>
    <inlineHelpText>Used to set the default logo, for instance, in ClientBrandingService</inlineHelpText>
    <label>Default Client Brand Key</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BluewaveLogo</fullName>
                <default>true</default>
                <label>BluewaveLogo</label>
            </value>
            <value>
                <fullName>Perch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>