force-app/main/default/objects/System_Default__mdt/fields/Default_Copado_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Copado_Project_ID__c</fullName>
    <inlineHelpText>Default ID for Copado Project. Used when creating a new User Story</inlineHelpText>
    <label>Default Copado Project ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>