force-app/main/default/objects/System_Default__mdt/fields/Test_Credit_Login_Account_Username__c.field-meta.xml
<CustomField>
    <fullName>Test_Credit_Login_Account_Username__c</fullName>
    <inlineHelpText>Account used to pull credit from LaserCA for testcases or in sandboxes</inlineHelpText>
    <label>Test Credit Login Account Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>